--- a/_posts/0000-01-02-Devikamm772.md
+++ b/_posts/0000-01-02-Devikamm772.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+"If you cannot do great things, do small things in a great way." - Napoleon Hill
 Use the left arrow to go back!
